--- a/calligre-dark-style.css
+++ b/calligre-dark-style.css
@@ -2,6 +2,8 @@ body {
     color: #fff;
     background-color: #333;
     text-align: justify;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 pre, code {
