--- a/calligre-dark-style.css
+++ b/calligre-dark-style.css
@@ -52,3 +52,12 @@ h3 {
     border-radius: 4px !important;
     border: 1px solid #999 !important;
 }
+
+.note h1,
+.note h2,
+.note h3,
+.note h4,
+.note h5,
+.note h6 {
+    padding-top: 0 !important;
+}
